# Travelers-ECS

./: .gitignore  CMakeLists.txt  README.md
Ecs/: CMakeLists.txt
Ecs/include/TRA/ecs/: archetype.hpp  archetypeKey.hpp  archetypeSignature.hpp  autoRegisterComponent.hpp  chunk.hpp  chunkColumn.hpp  chunkLayout.hpp  component.hpp  componentFactoryRegistry.hpp  componentId.hpp  componentInfo.hpp  componentLibrary.hpp  componentManager.hpp  componentRegistry.hpp  componentTraits.hpp  componentTypeID.hpp  engine.hpp  entity.hpp  entityData.hpp  entityManager.hpp  entitySignature.hpp  iComponent.hpp  signatureKey.hpp  sparseSet.hpp  tag.hpp  tagLibrary.hpp  world.hpp
Ecs/src/: archetype.cpp  archetypeKey.cpp  archetypeSignature.cpp  componentFactoryRegistry.cpp  componentLibrary.cpp  componentManager.cpp  engine.cpp  entityBuffer.cpp  entityManager.cpp  entitySignature.cpp  signatureKey.cpp  tagLibrary.cpp  world.cpp
TestEcs/: CMakeLists.txt
TestEcs/include/: addTestComponentSystem.hpp  common.hpp  component.hpp  querryEntityBufferTestSystem.hpp
TestEcs/src/: main.cpp
